--- a/docs/assets/css/theme-custom.css
+++ b/docs/assets/css/theme-custom.css
@@ -80,7 +80,7 @@
 
 .markdown-section blockquote ul {
   list-style: none;
-  margin-top: 0;
+  margin-top: .5em;
   padding-top: 0;
   margin-bottom: .5em;
   padding-bottom: 0;
@@ -114,7 +114,7 @@
 
 .reminders ul {
   list-style: none;
-  margin-top: 0;
+  margin-top: .5em;
   padding-top: 0;
   margin-bottom: .5em;
   padding-bottom: 0;
