--- a/docs/assets/css/theme-custom.css
+++ b/docs/assets/css/theme-custom.css
@@ -166,7 +166,7 @@
 
 .markdown-section summary {
   cursor: pointer;
-  color: #008EE2;
+  color: var(--link-color);
   padding: 0;
   background-color: #FFFFFF;
   h1, h2, h3 {
