--- a/docs/assets/css/theme-custom.css
+++ b/docs/assets/css/theme-custom.css
@@ -179,3 +179,7 @@
 .markdown-section .fa-fw {
     text-align: left;
 }
+
+.app-nav:not(:empty) ~ main .markdown-section {
+    padding-top: 4.5rem;
+}
