--- a/docs/assets/css/theme.css
+++ b/docs/assets/css/theme.css
@@ -32,7 +32,7 @@
 }
 
 .markdown-section blockquote ul li:before {
-  content: '\2B25';
+  content: '\25C6';
   color: #333;
   padding-right: 2px;
 }
