--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -3,3 +3,7 @@
 Put your custom CSS in this file.
 ===============================================================================================================================
 */
+
+.markdown-section h1 a, .markdown-section h2 a, .markdown-section h3, .markdown-section h4 a, .markdown-section h5 a, .markdown-section h6 a {
+    text-decoration: none;
+}
