--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -4,6 +4,6 @@ Put your custom CSS in this file.
 ===============================================================================================================================
 */
 
-.markdown-section h1 a, .markdown-section h2 a, .markdown-section h3, .markdown-section h4 a, .markdown-section h5 a, .markdown-section h6 a {
+.markdown-section h1 a, .markdown-section h2 a, .markdown-section h3 a, .markdown-section h4 a, .markdown-section h5, .markdown-section h6 a {
     text-decoration: none;
 }
