--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -4,6 +4,17 @@ Put your custom CSS in this file.
 ===============================================================================================================================
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+body {
+    font-family: "Lato","Helvetica Neue",Arial,sans-serif;
+}
+
+.markdown-section a:link:not(:button), .markdown-section a:visited, .markdown-section a:hover, .markdown-section a:active {
+    color: #008EE2;
+    text-decoration: none;
+}
+
 .markdown-section h1 a, .markdown-section h2 a, .markdown-section h3 a, .markdown-section h4 a, .markdown-section h5, .markdown-section h6 a {
     text-decoration: none;
 }
