--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -8,6 +8,8 @@ Put your custom CSS in this file.
 
 body {
     font-family: "Lato","Helvetica Neue",Arial,sans-serif;
+    line-height: 1.4;
+    font-size: 1.0rem;
 }
 
 .markdown-section a:link:not(:button), .markdown-section a:visited, .markdown-section a:hover, .markdown-section a:active {
