--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -6,10 +6,10 @@ Put your custom CSS in this file.
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-body {
+body .markdown-section {
     font-family: "Lato","Helvetica Neue",Arial,sans-serif;
     line-height: 1.4;
-    font-size: 1.0rem;
+    font-size:1.0rem;
 }
 
 .markdown-section a:link:not(:button), .markdown-section a:visited, .markdown-section a:hover, .markdown-section a:active {
