--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -4,6 +4,8 @@ Put your custom CSS in this file.
 ===============================================================================================================================
 */
 
+/* CSS to better visually match Docsify pages within Canvas LMS (uncomment to use) */
+
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 body .markdown-section {
