--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -22,3 +22,7 @@ body .markdown-section {
 .markdown-section h1 a, .markdown-section h2 a, .markdown-section h3 a, .markdown-section h4 a, .markdown-section h5, .markdown-section h6 a {
     text-decoration: none;
 }
+
+.markdown-section .button {
+  background-color: #008EE2;
+}
