--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -18,6 +18,6 @@ body .markdown-section {
     text-decoration: none;
 }
 
-.markdown-section a:hover {
+.markdown-section a:hover:not(.button) {
     text-decoration: underline;
 }
