--- a/docs/assets/css/theme.css
+++ b/docs/assets/css/theme.css
@@ -76,7 +76,8 @@
   height: auto;
   display: inline-block;
   margin-top: 4px;
-  padding: 8px;
+  padding: 10px;
+  line-height: 1.2rem;
   background-color: var(--link-color);
   text-decoration: none;
   border-radius: .25rem;
@@ -98,7 +99,8 @@
   line-height: 1;
   text-align: center;
   white-space: nowrap;
-  vertical-align: baseline;
+  vertical-align: middle;
+  margin-top: -0.4em;
   border-radius: .25rem;
   transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
   text-decoration: none;
@@ -127,7 +129,6 @@
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
   background-clip: border-box;
   border: 1px solid #CCCCCC;
   border-radius: .15rem;
@@ -136,7 +137,6 @@
 .markdown-section details {
   padding: .75rem 1.25rem;
   margin-bottom: 0;
-  background-color: #FFFFFF;
   border-bottom: 1px solid #CCCCCC;
 }
 
@@ -144,7 +144,6 @@
   cursor: pointer;
   color: var(--link-color);
   padding: 0;
-  background-color: #FFFFFF;
 
   h1, h2, h3 {
     margin: 0;
@@ -237,19 +236,19 @@
 }
 
 .markdown-section h1 {
-  line-height: 1.8rem;
-}
-
-.markdown-section h2 {
   line-height: 1.5rem;
 }
 
+.markdown-section h2 {
+  line-height: 1.4rem;
+}
+
 .markdown-section h3 {
-  line-height: 1.3rem;
+  line-height: 1.15rem;
 }
 
 .markdown-section h4 {
-  line-height: 1.2rem;
+  line-height: 1.15rem;
 }
 
 .markdown-section h5 {
@@ -260,6 +259,10 @@
   line-height: 1.1rem;
 }
 
+body .app-nav {
+  margin-right: -10px;
+}
+
 body .docsify-pagination-container {
   display: flex;
   flex-wrap: wrap;
@@ -267,4 +270,38 @@ body .docsify-pagination-container {
   overflow: hidden;
   margin: 3em 0 1em;
   border-top: 0px solid rgba(0, 0, 0, .07);
+}
+
+@media only screen and (max-width: 480px) {
+
+   .markdown-section h1 {
+      font-size: 1.35rem;
+      line-height: 1.45rem;
+   }
+
+   .markdown-section h2 {
+      font-size: 1.25rem;
+      line-height: 1.35rem;
+   }
+
+   .markdown-section h3 {
+      font-size: 1.15rem;
+      line-height: 1.25rem;
+   }
+
+   .markdown-section h4 {
+      font-size: 1.10rem;
+      line-height: 1.15rem;
+   }
+
+   .markdown-section h5 {
+      font-size: 1.05rem;
+      line-height: 1.1rem;
+   }
+
+   .markdown-section h6 {
+      font-size: 1rem;
+      line-height: 1rem;
+   }
+
 }
