--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -13,6 +13,10 @@ body .markdown-section {
   line-height: 1.4;
 }
 
+.markdown-section {
+  padding: 1rem 14px;
+}
+
 .markdown-section blockquote {
   border-color: #757b7f;
 }
