Update to v1.3.0 pre-release Docsify Open Course Starter Kit.

--- a/docs/assets/css/toc.css
+++ b/docs/assets/css/toc.css
@@ -1,14 +1,32 @@
+.content *::-webkit-scrollbar {
+  background-color: transparent;
+  width: 12px;
+}
+.content *::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+.content *::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  border: 3px solid transparent;
+  background-color: rgba(0,0,0,0.3);
+  background-clip: content-box;
+}
 .content {
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
+}
+/* Specific style for .token.content inside code blocks */
+.content code .token.content {
+  display: inline;
 }
 .markdown-section {
   flex: 1 1 0%;
   margin: 0 48px;
 }
 .nav {
-  width: var(--toc-width, 200px);
+  width: var(--toc-width, 280px);
+  min-width: 200px;
   align-self: flex-start;
   flex: 0 0 auto;
 }
@@ -17,12 +35,24 @@ aside.nav.nothing {
 }
 
 .page_toc {
-  position: fixed;
   border-left-style: solid;
   border-left-width: 1px;
   border-left-color: rgba(0, 0, 0, 0.07);
   border-image-slice: 1;
   padding-left: 5px;
+  position: -webkit-sticky;
+  position: fixed;
+  overflow: auto;
+  max-height: 100vh;
+  top: 0;
+  bottom: auto;
+  margin-right: 10px;
+  scrollbar-width: thin !important;
+  scrollbar-color: grey transparent;
+}
+
+.page_toc a > * {
+  pointer-events: none;
 }
 
 .page_toc code {
@@ -37,9 +67,9 @@ aside.nav.nothing {
 
 .page_toc p.title {
   margin: 0px 0 0px 9px;
-  padding-top: 25px;
+  padding-top: 15px;
   padding-bottom: 5px;
-  font-weight: 600;
+  font-weight: 400;
   font-size: 1.2em;
 }
 .page_toc .anchor:hover:after {
@@ -50,9 +80,9 @@ aside.nav.nothing {
   list-style-type: none;
   margin-top: 0px;
   padding-left: 10px;
-  color: var(--text-color-base, black);
+  color: var(--base-color, black);
   text-decoration: none;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.2em;
 }
 
@@ -62,9 +92,9 @@ aside.nav.nothing {
 }
 
 .page_toc ul a {
-  color: var(--base-color);
+  color: var(--base-color, black);
   text-decoration: none;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.2em;
 }
 
@@ -72,10 +102,10 @@ aside.nav.nothing {
   padding-top: 7px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   .page_toc {
     position: relative;
-    top: -10px;
+    top: -20px;
     padding: 10px 0;
     border: none;
     border-bottom: 1px solid #ddd;
@@ -83,9 +113,10 @@ aside.nav.nothing {
   }
   .nav {
     margin: 0 auto;
-    width: 800px;
+    width: 900px;
   }
   .page_toc p.title {
+    font-weight: 400;
     font-size: 1.2em;
   }
   .content {
